--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,9 +5,18 @@
 	"version": "0.2.0",
 	"configurations": [
 		{
+			"type": "node",
+			"request": "launch",
+			"name": "Lines Maker",
+			"program": "${workspaceFolder}/lines-maker/index.js",
+			"skipFiles": [
+				"<node_internals>/**"
+			]
+		},
+		{
 			"type": "extendscript-debug",
 			"request": "launch",
-			"name": "Run Extend Script",
+			"name": "AE Project Generator",
 			// "program": "${file}",
 			"program": "${workspaceFolder}/index.js",
 			"stopOnEntry": false,
