--- a/reso/extras/.eslintrc.json
+++ b/reso/extras/.eslintrc.json
@@ -10,7 +10,7 @@
 	},
 	"rules": {
 		"indent": [ 0, "tab", { "ignoreComments": true } ],
-		"linebreak-style": [ 2, "windows" ],
+		"linebreak-style": [ 2, "unix" ],
 		"quotes": [ 0, "single" ],
 		"semi": [ 2, "always" ],
 		"no-unused-vars": [ 2, { "vars": "all", "args": "after-used" } ],
