--- a/reso/conf/.eslintrc.json
+++ b/reso/conf/.eslintrc.json
@@ -16,7 +16,8 @@
 		"no-unused-vars": [ 2, { "vars": "all", "args": "after-used" } ],
 		"no-console": [ 2 ],
 		"no-var": [ 2 ],
-		"require-atomic-updates": [ 0 ]
+		"require-atomic-updates": [ 0 ],
+		"no-dupe-keys": [ 1 ]
 	},
 	"globals": {
 	}
