--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,7 +7,7 @@
 		{
 			"type": "node",
 			"request": "launch",
-			"name": "Lines Maker",
+			"name": "更新台词配置",
 			"program": "${workspaceFolder}/lines-maker/index.js",
 			"runtimeExecutable": "node.exe",
 			"skipFiles": [
@@ -18,7 +18,7 @@
 		{
 			"type": "extendscript-debug",
 			"request": "launch",
-			"name": "AE Project Generator",
+			"name": "生成AE项目",
 			"program": "${workspaceFolder}/index.js",
 			"stopOnEntry": false,
 			"targetSpecifier": "aftereffects-17.0",
