--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,7 +4,7 @@
 		{
 			"type": "pwa-node",
 			"request": "launch",
-			"name": "更新台词",
+			"name": "生成配置",
 			"skipFiles": [
 				"<node_internals>/**"
 			],
@@ -15,8 +15,8 @@
 		{
 			"type": "extendscript-debug",
 			"request": "launch",
-			"name": "生成AE项目",
-			"program": "${workspaceFolder}/index.js",
+			"name": "生成工程",
+			"program": "${workspaceFolder}/src/index.js",
 			"stopOnEntry": false,
 			"targetSpecifier": "aftereffects-17.0",
 		}
