--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,7 @@
 /config.js
 /src-extend/config.json
 /src-extend/config.js
+
+/src-extend-2022/lib/config.path.js
+/src-extend-2022/lib/config.json
+/src-extend-2022/dist.js
