--- a/package.json
+++ b/package.json
@@ -9,10 +9,15 @@
 	"engines": {
 		"node": ">=14.18.1"
 	},
+	"scripts": {
+		"构建": "cd src-extend-2022 && tsc"
+	},
 	"dependencies": {
-		"music-metadata": "^7.11.4"
+		"music-metadata": "^7.12.2",
+		"types-for-adobe": "^7.0.0",
+		"typescript": "^4.6.2"
 	},
 	"devDependencies": {
-		"eslint": "^8.6.0"
+		"eslint": "^8.10.0"
 	}
 }
