--- a/src-extend-2022/tsconfig.json
+++ b/src-extend-2022/tsconfig.json
@@ -16,6 +16,10 @@
 		"./lib/ensure.js",
 
 		"./part/addOpener.js",
+		"./part/addTitle.js",
+		"./part/calcDuration.js",
+		"./part/addLine.js",
+		"./part/addLineScroll.js",
 
 		"./index.js",
 	]
