--- a/src-extend-2022/tsconfig.json
+++ b/src-extend-2022/tsconfig.json
@@ -20,6 +20,8 @@
 		"./part/calcDuration.js",
 		"./part/addLine.js",
 		"./part/addLineScroll.js",
+		"./part/addBGM.js",
+		"./part/addEnding.js",
 
 		"./index.js",
 	]
