--- a/src-extend-2022/tsconfig.json
+++ b/src-extend-2022/tsconfig.json
@@ -22,6 +22,8 @@
 		"./part/addLineScroll.js",
 		"./part/addBGM.js",
 		"./part/addEnding.js",
+		"./part/addBackground.js",
+		"./part/addCounter.js",
 
 		"./index.js",
 	]
