--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,7 +4,7 @@
 		{
 			"type": "pwa-node",
 			"request": "launch",
-			"name": "1: 生成配置",
+			"name": "1: 更新配置",
 			"skipFiles": [
 				"<node_internals>/**"
 			],
@@ -15,45 +15,36 @@
 		{
 			"type": "extendscript-debug",
 			"request": "launch",
-			"name": "2: 运行工程",
-			"program": "${workspaceFolder}/src-extend/index.js",
-			"stopOnEntry": false,
-			"targetSpecifier": "aftereffects-17.0",
-		},
-		{
-			"type": "extendscript-debug",
-			"request": "launch",
-			"name": "3: 测试工程",
-			"program": "${workspaceFolder}/src-extend/test.js",
+			"name": "2: 制作视频（AE2022）",
+			"program": "${workspaceFolder}/src-extend/dist.js",
 			"stopOnEntry": false,
 			"targetSpecifier": "aftereffects-22.0",
 		},
 		{
 			"type": "extendscript-debug",
 			"request": "launch",
-			"name": "4: 测试工程（2020）",
-			"program": "${workspaceFolder}/src-extend/test.js",
-			"stopOnEntry": false,
-			"targetSpecifier": "aftereffects-17.0",
-		},
-		{
-			"type": "extendscript-debug",
-			"request": "launch",
-			"name": "5: 测试2022工程（2020）",
-			"program": "${workspaceFolder}/src-extend-2022/dist.js",
+			"name": "3: 制作视频（AE2022、编译脚本）",
+			"program": "${workspaceFolder}/src-extend/dist.js",
 			"stopOnEntry": false,
 			"targetSpecifier": "aftereffects-22.0",
 			"preLaunchTask": "npm: 构建",
-			"internalConsoleOptions": "neverOpen"
 		},
 		{
 			"type": "extendscript-debug",
 			"request": "launch",
-			"name": "6: 测试2022工程（2020，不编译）",
-			"program": "${workspaceFolder}/src-extend-2022/dist.js",
+			"name": "2: 制作视频（AE2020）",
+			"program": "${workspaceFolder}/src-extend/dist.js",
 			"stopOnEntry": false,
 			"targetSpecifier": "aftereffects-17.0",
-			"internalConsoleOptions": "neverOpen"
+		},
+		{
+			"type": "extendscript-debug",
+			"request": "launch",
+			"name": "3: 制作视频（AE2020、编译脚本）",
+			"program": "${workspaceFolder}/src-extend/dist.js",
+			"stopOnEntry": false,
+			"targetSpecifier": "aftereffects-17.0",
+			"preLaunchTask": "npm: 构建",
 		},
 	]
 }
