--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
 	"engines": {
 		"node": ">=14.18.1"
 	},
+	"scripts": {
+		"构建": "cd src-extend && tsc"
+	},
 	"dependencies": {
 		"music-metadata": "^7.12.3",
 		"types-for-adobe": "^7.0.1",
