--- a/src-extend/tsconfig.json
+++ b/src-extend/tsconfig.json
@@ -15,15 +15,15 @@
 		"./lib/lang.js",
 		"./lib/ensure.js",
 
-		"./part/addOpener.js",
-		"./part/addTitle.js",
-		"./part/calcDuration.js",
-		"./part/addLine.js",
-		"./part/addLineScroll.js",
-		"./part/addBGM.js",
-		"./part/addEnding.js",
-		"./part/addBackground.js",
-		"./part/addCounter.js",
+		"./part/add-opener.js",
+		"./part/add-title.js",
+		"./part/calc-duration.js",
+		"./part/add-line.js",
+		"./part/add-line-scroll.js",
+		"./part/add-bgm.js",
+		"./part/add-ending.js",
+		"./part/add-background.js",
+		"./part/add-counter.js",
 
 		"./index.js",
 	]
