--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,7 +2,7 @@
 	"version": "0.2.0",
 	"configurations": [
 		{
-			"type": "pwa-node",
+			"type": "node",
 			"request": "launch",
 			"name": "1: 更新配置",
 			"skipFiles": [
@@ -15,35 +15,31 @@
 		{
 			"type": "extendscript-debug",
 			"request": "launch",
-			"name": "2: 制作视频（AE2022）",
-			"program": "${workspaceFolder}/src-extend/dist.js",
-			"stopOnEntry": false,
-			"targetSpecifier": "aftereffects-22.0",
+			"name": "2: 生成工程（AE2022）",
+			"script": "${workspaceFolder}/src-extend/dist.js",
+			"hostAppSpecifier": "aftereffects-22.0",
 		},
 		{
 			"type": "extendscript-debug",
 			"request": "launch",
-			"name": "3: 制作视频（AE2022、编译脚本）",
-			"program": "${workspaceFolder}/src-extend/dist.js",
-			"stopOnEntry": false,
-			"targetSpecifier": "aftereffects-22.0",
+			"name": "3: 构建脚本、生成工程（AE2022）",
+			"script": "${workspaceFolder}/src-extend/dist.js",
+			"hostAppSpecifier": "aftereffects-22.0",
 			"preLaunchTask": "npm: 构建",
 		},
 		{
 			"type": "extendscript-debug",
 			"request": "launch",
-			"name": "2: 制作视频（AE2020）",
-			"program": "${workspaceFolder}/src-extend/dist.js",
-			"stopOnEntry": false,
-			"targetSpecifier": "aftereffects-17.0",
+			"name": "2: 生成工程（AE2020）",
+			"script": "${workspaceFolder}/src-extend/dist.js",
+			"hostAppSpecifier": "aftereffects-17.0",
 		},
 		{
 			"type": "extendscript-debug",
 			"request": "launch",
-			"name": "3: 制作视频（AE2020、编译脚本）",
-			"program": "${workspaceFolder}/src-extend/dist.js",
-			"stopOnEntry": false,
-			"targetSpecifier": "aftereffects-17.0",
+			"name": "3: 构建脚本、生成工程（AE2020）",
+			"script": "${workspaceFolder}/src-extend/dist.js",
+			"hostAppSpecifier": "aftereffects-17.0",
 			"preLaunchTask": "npm: 构建",
 		},
 	]
