add global comp for global var; all line box colors are linked to global comp;

--- a/src-extend/tsconfig.json
+++ b/src-extend/tsconfig.json
@@ -16,6 +16,7 @@
 		"./lib/lang.js",
 		"./lib/ensure.js",
 
+		"./part/add-global.js",
 		"./part/add-opener.js",
 		"./part/add-title.js",
 		"./part/calc-duration.js",
