--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -18,6 +18,7 @@
 			"name": "2: 生成工程（AE2022）",
 			"script": "${workspaceFolder}/src-extend/dist.js",
 			"hostAppSpecifier": "aftereffects-22.0",
+			"preLaunchTask": "npm: 更新配置",
 		},
 		{
 			"type": "extendscript-debug",
